Added html and logo to homepage

--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://kit.fontawesome.com/6747f39511.js" crossorigin="anonymous"></script>
+    <script src="js/main.js" type="module" defer></script>
+    <script src="js/utils.js" type="module" defer></script>
+    <title>Rainydays</title>
 </head>
 <body>
-
+    <header>
+        <div>
+            <img class="logo" src="./assets/images/rainy-days-logo.svg">
+            <a href="index.html">Home</a>
+        </div>
+        <div class="cart-icon-container">
+            <i id="cartToggleBTN" class="fa-solid fa-cart-shopping fa-xl"></i>
+            <span class="cart-counter"></span>
+        </div>
+        <div>
+            <ul id="cartContainer">
+            </ul>
+        </div>
+    </header>
+    <button class="filterBtnMen filterBtn" data-filter="mens">Men</button>
+    <button class="filterBtnLadies filterBtn" data-filter="womens">Ladies</button>
+    <button class="filterBtnAll filterBtn" data-filter="all">Show All</button>
+    <span class="loader">Loading...</span>
+    <div id="products-container">
+    </div>
 </body>
 </html>
