--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://kit.fontawesome.com/6747f39511.js" crossorigin="anonymous"></script>
-    <script src="js/main.js" type="module" defer></script>
+    <script src="js/app.js" type="module" defer></script>
     <script src="js/utils.js" type="module" defer></script>
     <title>Rainydays</title>
 </head>
