Added function to filter products by gender

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://kit.fontawesome.com/6747f39511.js" crossorigin="anonymous"></script>
     <script src="js/app.js" type="module" defer></script>
-    <script src="js/utils.js" type="module" defer></script>
     <title>Rainydays</title>
 </head>
 <body>
@@ -24,8 +23,8 @@
             </ul>
         </div>
     </header>
-    <button class="filterBtnMen filterBtn" data-filter="mens">Men</button>
-    <button class="filterBtnLadies filterBtn" data-filter="womens">Ladies</button>
+    <button class="filterBtnMen filterBtn" data-filter="Male">Men</button>
+    <button class="filterBtnLadies filterBtn" data-filter="Female">Ladies</button>
     <button class="filterBtnAll filterBtn" data-filter="all">Show All</button>
     <span class="loader">Loading...</span>
     <div id="products-container">
