added html to checkout page

--- a/pages/checkout/index.html
+++ b/pages/checkout/index.html
@@ -2,9 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../../css/style.css">
+    <script src="https://kit.fontawesome.com/6747f39511.js" crossorigin="anonymous"></script>
+    <script src="../../js/checkout.js" defer type="module"></script>
+    <title>Rainydays - Checkout</title>
 </head>
 <body>
+    <header>
+        <div>
+            <img class="logo" src="../../assets/images/rainy-days-logo.svg">
+            <a href="../../index.html">Home</a>
+        </div>
+    </header>
+    <span class="loader">Loading...</span>
+    <div id="checkout-container">
+
+            <div class="checkout-details">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" ><br>
+
+                <label for="shipping-address">Shipping Address:</label>
+                <input type="text" id="shipping-address" name="shipping-address"><br>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" ><br>
+
+                <label for="phone">Phone:</label>
+                <input type="tel" id="phone" name="phone" ><br>
+
+                <label for="payment-method">Payment Method:</label>
+                <select id="payment-method" name="payment-method" >
+                    <option value="" disabled selected>Select Payment Method</option>
+                    <option value="hopes">Hopes and prayers</option>
+                    <option value="rupees">Hylian rupees</option>
+                    <option value="spice">Spice melange</option>
+                </select><br>
+                <input type="submit" value="Confirm Order">
+            </div>
+        <div class="checkout-summary">
+
+        </div>
+
+        </div>
 
 </body>
 </html>
