--- a/pages/product/index.html
+++ b/pages/product/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/style.css">
     <script src="https://kit.fontawesome.com/6747f39511.js" crossorigin="anonymous"></script>
     <script src="../../js/product.js" defer type="module"></script>
-    <title>Product</title>
+    <title>Rainydays - Product</title>
 </head>
 <body>
     <header>
