--- a/pages/checkout-success/index.html
+++ b/pages/checkout-success/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../../css/style.css">
+
+
+    <title>Rainydays - Checkout success</title>
 </head>
 <body>
+
+    <h1>Thank you for shopping with us</h1>
+
+    <a href="../../index.html">Return to Front page</a>
 
 </body>
 </html>
