--- a/pages/checkout/index.html
+++ b/pages/checkout/index.html
@@ -15,22 +15,16 @@
             <a href="../../index.html">Home</a>
         </div>
     </header>
-    <span class="loader">Loading...</span>
     <div id="checkout-container">
-
             <div class="checkout-details">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" ><br>
-
                 <label for="shipping-address">Shipping Address:</label>
                 <input type="text" id="shipping-address" name="shipping-address"><br>
-
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" ><br>
-
                 <label for="phone">Phone:</label>
                 <input type="tel" id="phone" name="phone" ><br>
-
                 <label for="payment-method">Payment Method:</label>
                 <select id="payment-method" name="payment-method" >
                     <option value="" disabled selected>Select Payment Method</option>
@@ -38,11 +32,11 @@
                     <option value="rupees">Hylian rupees</option>
                     <option value="spice">Spice melange</option>
                 </select><br>
-                <input type="submit" value="Confirm Order">
+                <input type="submit" value="Confirm Order" class="confirmOrder">
             </div>
-        <div class="checkout-summary">
+        <ul class="checkout-summary">
 
-        </div>
+        </ul>
 
         </div>
 
