--- a/pages/product/index.html
+++ b/pages/product/index.html
@@ -19,7 +19,7 @@
             <span class="cart-counter"></span>
         </div>
         <div>
-            <ul id="cartContainer">
+            <ul class="cartContainer">
             </ul>
         </div>
     </header>
