--- a/pages/checkout-success/index.html
+++ b/pages/checkout-success/index.html
@@ -9,10 +9,11 @@
     <title>Rainydays - Checkout success</title>
 </head>
 <body>
-
+<div class="checkout-container">
+    <img class="checkout-logo" src="../../assets/images/rainy-days-logo.svg">
     <h1>Thank you for shopping with us</h1>
 
     <a href="../../index.html">Return to Front page</a>
-
+</div>
 </body>
 </html>
