--- a/pages/product/index.html
+++ b/pages/product/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="logo-container">
             <img class="logo" src="../../assets/images/rainy-days-logo.svg">
             <a href="../../index.html">Home</a>
         </div>
